--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+
+public/css/
+
+public/fonts/
+
+public/js/
+
+public/uploads/
+
+public/mix-manifest\.json
